--- a/Turn1IR.html
+++ b/Turn1IR.html
@@ -1,1 +1,317 @@
-T1IR
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Light Up the Grid!</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background: linear-gradient(135deg, #1a1a2e, #16213e);
+            color: #e94560;
+        }
+        .container {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 15px;
+            padding: 30px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+            max-width: 800px;
+            width: 100%;
+        }
+        h1, h2 {
+            text-align: center;
+            color: #386eaf;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            margin-bottom: 20px;
+        }
+        #game-grid {
+            display: grid;
+            grid-template-columns: repeat(12, 40px);
+            gap: 2px;
+            margin: 20px auto;
+            justify-content: center;
+        }
+        .cell {
+            width: 40px;
+            height: 40px;
+            font-size: 24px;
+            text-align: center;
+            line-height: 40px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            border-radius: 5px;
+        }
+        .cell:hover {
+            transform: scale(1.1);
+        }
+        .menu, .game-info, .game-over, .tutorial {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .button-group {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+        select, button {
+            margin: 5px;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            background-color: #0f3460;
+            color: #e94560;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        select:hover, button:hover {
+            background-color: #16213e;
+        }
+        .game-info span {
+            margin: 0 10px;
+            font-weight: bold;
+        }
+        @keyframes glow {
+            from {
+                text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #e60073, 0 0 20px #e60073, 0 0 35px #e60073, 0 0 40px #e60073, 0 0 50px #e60073;
+            }
+            to {
+                text-shadow: 0 0 10px #fff, 0 0 20px #ff4da6, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6;
+            }
+        }
+        .lit {
+            animation: glow 1s ease-in-out infinite alternate;
+        }
+        .tutorial {
+            text-align: left;
+            max-height: 400px;
+            overflow-y: auto;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 10px;
+        }
+        .tutorial h3 {
+            color: #0f3460;
+            margin-top: 20px;
+        }
+        .tutorial ul {
+            padding-left: 20px;
+        }
+        .tutorial li {
+            margin-bottom: 10px;
+        }
+        .hidden {
+            display: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Light Up the Grid!</h1>
+        <div id="main-menu" class="menu">
+            <h2>Main Menu</h2>
+            <div class="button-group">
+                <button onclick="showTutorial()">How to Play</button>
+                <select id="difficulty">
+                    <option value="easy">Easy</option>
+                    <option value="medium">Medium</option>
+                    <option value="hard">Hard</option>
+                </select>
+                <button onclick="startGame()">Start Game</button>
+            </div>
+        </div>
+        <div id="tutorial" class="tutorial hidden">
+            <h2>How to Play</h2>
+            <p>Welcome to Light Up the Grid! Your goal is to illuminate all the dark cells using a limited number of light orbs. Here's how to play:</p>
+            <h3>Game Elements:</h3>
+            <ul>
+                <li>⬛ Dark Cell: Needs to be lit up</li>
+                <li>💡 Light Orb: Place these to illuminate surrounding cells</li>
+                <li>✨ Lit Cell: Already illuminated</li>
+                <li>🧱 Wall: Blocks light</li>
+                <li>🪞 Mirror: Reflects light at a 90-degree angle</li>
+            </ul>
+            <h3>Rules:</h3>
+            <ul>
+                <li>Click on a dark cell to place a light orb</li>
+                <li>Light travels in straight lines horizontally and vertically</li>
+                <li>Walls block light, while mirrors reflect it</li>
+                <li>You have a limited number of orbs (5) to use</li>
+                <li>The game ends when all cells are lit or you run out of orbs</li>
+            </ul>
+            <h3>Scoring:</h3>
+            <ul>
+                <li>Earn 1 point for each cell you illuminate</li>
+                <li>Try to light up the entire grid with the fewest orbs for a high score!</li>
+            </ul>
+            <h3>Difficulty Levels:</h3>
+            <ul>
+                <li>Easy: Fewer obstacles, great for beginners</li>
+                <li>Medium: More obstacles, requiring strategic orb placement</li>
+                <li>Hard: Many obstacles, presenting a true challenge!</li>
+            </ul>
+            <button onclick="showMenu()">Back to Menu</button>
+        </div>
+        <div id="game-info" class="game-info hidden">
+            <span>Score: <span id="score">0</span></span>
+            <span>Orbs left: <span id="orbs-left">5</span></span>
+        </div>
+        <div id="game-grid"></div>
+        <div id="game-over" class="game-over hidden">
+            <h2 id="game-over-message"></h2>
+            <div class="button-group">
+                <button onclick="startGame()">Play Again</button>
+                <button onclick="showMenu()">Back to Menu</button>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        const GRID_SIZE = 12;
+        const CELL_TYPES = {
+            DARK: '⬛',
+            LIGHT: '💡',
+            LIT: '✨',
+            WALL: '🧱',
+            MIRROR: '🪞'
+        };
+        const DIRECTIONS = [[0, 1], [1, 0], [0, -1], [-1, 0]];
+
+        let grid = [];
+        let score = 0;
+        let orbsLeft = 5;
+        let gameState = 'menu';
+
+        function showMenu() {
+            setVisibility('main-menu', true);
+            setVisibility('tutorial', false);
+            setVisibility('game-info', false);
+            setVisibility('game-over', false);
+            document.getElementById('game-grid').innerHTML = '';
+            gameState = 'menu';
+        }
+
+        function showTutorial() {
+            setVisibility('main-menu', false);
+            setVisibility('tutorial', true);
+        }
+
+        function startGame() {
+            const difficulty = document.getElementById('difficulty').value;
+            initializeGrid(difficulty);
+            renderGrid();
+            updateScore(0);
+            setOrbsLeft(5);
+            gameState = 'playing';
+            setVisibility('main-menu', false);
+            setVisibility('tutorial', false);
+            setVisibility('game-info', true);
+            setVisibility('game-over', false);
+        }
+
+        function setVisibility(elementId, isVisible) {
+            document.getElementById(elementId).classList.toggle('hidden', !isVisible);
+        }
+
+        function initializeGrid(difficulty) {
+            grid = Array(GRID_SIZE).fill().map(() => Array(GRID_SIZE).fill(CELL_TYPES.DARK));
+            const obstacles = { easy: 10, medium: 20, hard: 30 }[difficulty];
+            placeRandomObstacles(obstacles);
+        }
+
+        function placeRandomObstacles(count) {
+            for (let i = 0; i < count; i++) {
+                let x, y;
+                do {
+                    x = Math.floor(Math.random() * GRID_SIZE);
+                    y = Math.floor(Math.random() * GRID_SIZE);
+                } while (grid[y][x] !== CELL_TYPES.DARK);
+                grid[y][x] = Math.random() < 0.7 ? CELL_TYPES.WALL : CELL_TYPES.MIRROR;
+            }
+        }
+
+        function renderGrid() {
+            const gameGrid = document.getElementById('game-grid');
+            gameGrid.innerHTML = '';
+            grid.forEach((row, y) => {
+                row.forEach((cell, x) => {
+                    const cellElement = document.createElement('div');
+                    cellElement.className = 'cell';
+                    cellElement.textContent = cell;
+                    if (cell === CELL_TYPES.LIT) {
+                        cellElement.classList.add('lit');
+                    }
+                    cellElement.onclick = () => placeOrb(x, y);
+                    gameGrid.appendChild(cellElement);
+                });
+            });
+        }
+
+        function placeOrb(x, y) {
+            if (gameState === 'playing' && grid[y][x] === CELL_TYPES.DARK && orbsLeft > 0) {
+                grid[y][x] = CELL_TYPES.LIGHT;
+                setOrbsLeft(orbsLeft - 1);
+                propagateLight(x, y);
+                renderGrid();
+                checkWinCondition();
+            }
+        }
+
+        function propagateLight(x, y) {
+            DIRECTIONS.forEach(([dx, dy]) => {
+                let nx = x + dx, ny = y + dy;
+                while (nx >= 0 && nx < GRID_SIZE && ny >= 0 && ny < GRID_SIZE) {
+                    if (grid[ny][nx] === CELL_TYPES.DARK) {
+                        grid[ny][nx] = CELL_TYPES.LIT;
+                        updateScore(1);
+                    } else if (grid[ny][nx] === CELL_TYPES.WALL) {
+                        break;
+                    } else if (grid[ny][nx] === CELL_TYPES.MIRROR) {
+                        [dx, dy] = [-dy, dx];
+                    }
+                    nx += dx;
+                    ny += dy;
+                }
+            });
+        }
+
+        function updateScore(points) {
+            score += points;
+            document.getElementById('score').textContent = score;
+        }
+
+        function setOrbsLeft(orbs) {
+            orbsLeft = orbs;
+            document.getElementById('orbs-left').textContent = orbsLeft;
+        }
+
+        function checkWinCondition() {
+            if (grid.every(row => row.every(cell => cell !== CELL_TYPES.DARK))) {
+                endGame('won');
+            } else if (orbsLeft === 0) {
+                endGame('lost');
+            }
+        }
+
+        function endGame(result) {
+            gameState = 'over';
+            const message = result === 'won'
+                ? `Congratulations! You've lit up the entire grid! Final score: ${score}`
+                : `Game Over. You've run out of orbs. Final score: ${score}`;
+            document.getElementById('game-over-message').textContent = message;
+            setVisibility('game-info', false);
+            setVisibility('game-over', true);
+        }
+
+        // Initialize the game
+        showMenu();
+    </script>
+</body>
+</html>
